<resources>
    <string name="app_name">体验订单</string>
    <string name="submit_error">提交出错了</string>
    <string name="icon_like">&#xe794;</string>
    <string name="icon_box">&#xe608;</string>
    <string name="icon_wifi">&#xe75c;</string>

    <string name="please_bind_hotel">请先绑定酒店</string>
    <string name="unbind_room">未绑定房间</string>
    <string name="unbind_hotel">未绑定酒店</string>
    <string name="successful">提交成功</string>
    <!--产品详情页-->
    <string name="add2cart">加入购物车</string>
    <string name="goods_details">产品详情</string>
    <string name="free1">免费借用</string>
    <string name="free2">免费体验</string>
    <string name="likes">点赞</string>
    <string name="num">数量</string>
    <string name="icon_more">&#xe6b9;</string>
    <string name="icon_less">&#xe6fe;</string>
    <string name="icon_up">&#xe663;</string>
    <string name="icon_down">&#xe664;</string>
    <string name="selected">已选</string>
    <string name="reselection">修改</string>
    <string name="confirm_reselection">确定修改</string>
    <string name="price">价格：</string>
    <!--提交订单页-->
    <string name="submit_order">提交订单</string>
    <string name="shopping_cart">购物车</string>
    <string name="sum">总共：</string>
    <string name="check_all">全选：</string>
    <string name="total">合计：</string>
    <string name="icon_cny">¥</string>
    <string name="icon_trash">&#xe619;</string>
    <!--支付页-->
    <string name="select_payment">选择支付方式</string>
    <string name="wechat_payment">微信支付</string>
    <string name="cash_payment">现金支付</string>
    <string name="account_payment">挂账支付</string>
    <string name="select_coupon">选择优惠券</string>
    <string name="coupon_unavailable">暂无可用优惠券</string>
    <string name="shopping_list">商品清单：</string>
    <string name="confirm_order">确认订单</string>
    <string name="times">×</string>
    <!--登录页-->
    <string name="please_select_login_type">请选择其中一种方式进行注册/登录</string>
    <string name="login_by_qrcode">方式一：微信扫描二维码登录</string>
    <string name="login_by_captche">方式二：手机号注册/登录</string>
    <string name="mobile">手机号</string>
    <string name="captche">验证码</string>
    <string name="send_captche">获取验证码</string>
    <string name="signin">注册/登录</string>
    <string name="please_login">请先登录</string>
</resources>
