<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="com.idianwoo.tv.steward2.activity.ShoppingCartActivity">

    <include android:id="@+id/header" layout="@layout/include_header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20px"
        android:layout_marginBottom="126px"
        android:layout_marginLeft="140px"
        android:layout_marginRight="140px"
        android:layout_below="@id/header">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">
            <!--左边-->
            <LinearLayout
                android:layout_width="1000px"
                android:layout_height="790px"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/goods_details_left_background"
                android:gravity="top|center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60px"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/shopping_cart"
                    android:textColor="@color/gray"
                    android:textSize="32px" />
                <android.support.v7.widget.RecyclerView
                        android:id="@+id/goods"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/goods_details_desc_background"
                        android:scrollbars="vertical">
                </android.support.v7.widget.RecyclerView>
                <!--<FrameLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@drawable/goods_details_desc_background">-->


                    <!--上下控件，感觉不需要-->
                    <!--<com.idianwoo.tv.widget.UpDownBtnView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>-->

                <!--</FrameLayout>-->

            </LinearLayout>

            <!--右边-->
            <LinearLayout
                    android:layout_width="622px"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/goods_details_right_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="30px"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:layout_marginLeft="14px" android:id="@+id/wrapper">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10px"
                        android:layout_gravity="left">

                    <TextView
                            android:layout_width="100px"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="100px"
                            android:gravity="center_vertical"
                            android:text="@string/sum"
                            android:textColor="@color/white"
                            android:textSize="32px"/>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:layout_marginRight="100px"
                    >
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:id="@+id/sum"
                                  android:gravity="left|center_vertical"
                                  android:text="9999"
                                  android:textSize="36px"
                                  android:paddingRight="36px"
                                  android:textStyle="bold"
                                  android:textColor="@color/red"/>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="match_parent"
                                  android:gravity="left|center_vertical"
                                  android:text="件商品"
                                  android:textSize="32px"
                                  android:textColor="@color/white"/>
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                        android:id="@+id/checkbox_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10px"
                        android:layout_gravity="left">
                    <TextView android:layout_width="100px"
                              android:layout_height="wrap_content"
                              android:layout_centerVertical="true"
                              android:text="@string/check_all"
                              android:textSize="32px"
                              android:layout_marginLeft="100px"
                              android:textColor="@color/white"/>

                    <android.support.v7.widget.AppCompatCheckBox
                            android:id="@+id/select_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:checked="false"
                            android:layout_centerVertical="true"
                            android:padding="0px"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="100px"
                            android:theme="@style/SubmitOrderRightCheckBox"/>
                </RelativeLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10px"
                        android:layout_gravity="left">
                    <TextView android:layout_width="100px"
                              android:layout_height="wrap_content"
                              android:gravity="center_vertical"
                              android:text="@string/total"
                              android:textSize="32px"
                              android:layout_marginLeft="100px"
                              android:textColor="@color/white"/>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="right"
                            android:layout_marginRight="100px"
                    >

                        <TextView android:layout_width="wrap_content"
                                  android:id="@+id/cny"
                                  android:layout_height="wrap_content"
                                  android:gravity="left|center_vertical"
                                  android:text="@string/icon_cny"
                                  android:textSize="36px"
                                  android:paddingRight="18px"
                                  android:textStyle="bold"
                                  android:textColor="@color/red"/>
                        <TextView android:layout_width="wrap_content"
                                  android:id="@+id/total"
                                  android:layout_height="match_parent"
                                  android:gravity="left|center_vertical"
                                  android:text="0.00"
                                  android:textSize="36px"
                                  android:textStyle="bold"
                                  android:textColor="@color/red"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="注：预计送达时间为15分钟送达"
                        android:paddingLeft="50px"
                        android:paddingRight="50px"
                        android:paddingTop="20px"
                        android:paddingBottom="20px"
                        android:gravity="left"
                        android:textColor="@color/white"
                        android:textSize="28px"/>

                <Button
                        android:id="@+id/submit_order"
                        android:layout_marginLeft="50px"
                        android:layout_marginRight="50px"
                        android:layout_width="500px"
                        android:layout_height="90px"
                        android:gravity="center"
                        android:focusable="true"
                        android:text="@string/submit_order"
                        android:textSize="36px"
                        android:padding="0px"
                        android:textColor="@color/white"
                        android:background="@drawable/button_orange"
                        android:nextFocusUp="@id/select_all"><requestFocus /></Button>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
